0.2.0: (Future)
Features:
 - Support for gamepad axes, e.g. analog sticks or triggers
 - Add scale presets for up to 6x
Bugfixes:
 - Qt: Fix issue with set frame sizes being the wrong height
 - Qt: Fix emulator crashing when full screen if a game is not running
 - GBA Thread: Allow halted games to exit cleanly
 - GBA BIOS: Fix HLE Lz77 and RL functions to properly account for width and invalid addresses
Misc:
 - Qt: Disable sync to video by default

0.1.0: (2014-12-13)
 - Initial release